--- a/project/musprivet/templates/musprivet/base.html
+++ b/project/musprivet/templates/musprivet/base.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="{{ title }}"/>
+    <meta property="og:url" content="{{ url }}"/>
+    <meta property="og:description" content="{{ description }}"/>
+    <meta property="og:image" content="{{ image }}"/>
+    <meta property="og:locale" content="ru_RU"/>
     <title>{% block title %}Готовые музыкальные поздравления и песни на заказ в подарок для ваших любимых от Музпривет.{% endblock %}</title>
     <meta name="description"
         content="Выберите готовое музыкальное поздравление в подарок любимым. Пришлем понравившийся аудио привет в формате мр3 на Вашу электронную почту. Поздравите лично со 100% гарантией!">
