--- a/project/musprivet/templates/musprivet/hero.html
+++ b/project/musprivet/templates/musprivet/hero.html
@@ -8,7 +8,7 @@
               Пришлем бесплатно 1 минуту Вашей песни за 24 часа
             </p>
             <a class="hero__link  hero__link_1" href="#ready-variants">Готовая песня</a>
-            <a class="hero__link" href="/podarit-pesnu">Заказать песню</a>
+            <a class="hero__link" href="{% url 'musprivet:song_list' %}">Заказать песню</a>
           </div>
         </div>
       </div>
