--- a/project/musprivet/templates/musprivet/ads_list.html
+++ b/project/musprivet/templates/musprivet/ads_list.html
@@ -88,14 +88,9 @@
                                 {% endif %}
                             </div>
                             <div class="col-12 col-xl-7 align-self-center">
-                                <video class="audioreklama-video-container" preload="metadata" poster="video/add-videoandmusic/sheff-cooker.png" controls>
-                                    <source src="video/add-videoandmusic/sheff-cooker.webm" type="video/WebM">
-                                    <source src="video/add-videoandmusic/sheff-cooker.mp4" type="video/mp4">
-                                    <p>Ваш браузер не поддерживает встроенные видео.</p>
-                                </video>
-                                <!--<div class="thumb-wrap">
+                                <div class="thumb-wrap">
                                     <iframe src="{{ video_ad.video_url }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                </div>-->
+                                </div>
                             </div>
                         </div>
                     </div>
