--- a/project/musprivet/templates/musprivet/congrat_detail.html
+++ b/project/musprivet/templates/musprivet/congrat_detail.html
@@ -41,7 +41,7 @@
           <div class="col-12 col-lg-6">
             <h2 class="zakaz__second-title">Отправьте {{ current_tag.name }} этот музпривет!</h2>
             <p class="zakaz__price">Стоимость музпривета - <b>{{ price.price }} ₽</b></p>
-            <form class="zakaz__form" action="/mus-pozdrav/{{ current_tag.slug }}/{{ congrat.slug }}" method="post">
+            <form class="zakaz__form" method="post">
             {% csrf_token %}
               <ul class="list-reset row zakaz__form-list">
                 <li class="col-12 col-md-6 flex flex-column">
@@ -58,6 +58,7 @@
                 </li>
               </ul>
               <button type="submit" class="btn zakaz__form-link">Оплатить</button>
+                <p class="zakaz__form_descr">После оплаты на указанную Вами почту почту придёт музыкальное поздравление в формате mp3.</p>
             </form>
           </div>
         </div>
