name link changed

--- a/project/musprivet/templates/musprivet/name_list.html
+++ b/project/musprivet/templates/musprivet/name_list.html
@@ -9,7 +9,7 @@
                     <ul class="list-reset name-list">
                         {% for name in names %}
                             <li class="name-item">
-                                <a class="name-link" href="{{ current_tag.slug }}/name/{{ name.slug }}">{{ name.name }}</a>
+                                <a class="name-link" href="/mus-pozdrav/{{ current_tag.slug }}/name/{{ name.slug }}">{{ name.name }}</a>
                             </li>
                         {% endfor %}
                     </ul>
