--- a/project/musprivet/templates/musprivet/name_poem_detail.html
+++ b/project/musprivet/templates/musprivet/name_poem_detail.html
@@ -65,7 +65,7 @@
                 </li>
               </ul>
               <button type="submit" class="btn zakaz__form-link">Оплатить</button>
-              <p class="zakaz__form_descr">После оплаты на указанную Вами почту почту придёт музыкальное поздравление в формате mp3.</p>
+              <p class="zakaz__form_descr">После оплаты на указанную Вами почту придёт музыкальное поздравление в формате mp3.</p>
             </form>
           </div>
         </div>
