--- a/project/musprivet/static/css/style.css
+++ b/project/musprivet/static/css/style.css
@@ -305,42 +305,42 @@ audio::-webkit-media-controls-panel {
 /* Внезапное сообщение сбоку  */
 .side-message {
   position: fixed;
-  bottom: 20px;
-  right: 15px;
+  top: 40px;
+  right: -225px;
   z-index: 21;
   max-width: 220px;
   padding: 10px;
   border-radius: 5px;
   background-color: var(--form-color-active);
   box-shadow: 1px 1px 3px 1px var(--altcolor);
-  animation: side-tremor 3s linear 1;
+  animation: side-tremor 5s linear 1;
   animation-fill-mode: forwards;
-  animation-delay: 0s;
+  animation-delay: 5s;
 }
 
 @keyframes side-tremor {
   0% {
-    transform: translateX(200%);
-  }
-
-  20% {
-    transform: translateX(-5px);
-  }
-
-  40% {
     transform: translateX(0);
   }
 
+  20% {
+    transform: translateX(-240px);
+  }
+
+  40% {
+    transform: translateX(-240px);
+  }
+
   60% {
-    transform: translateX(5px);
+    transform: translateX(-240px);
   }
 
   80% {
-    transform: translateX(-5px);
+    transform: translateX(-240px);
   }
 
   100% {
-    transform: translateX(200%);
+    transform: translateX(0);
   }
 }
 
@@ -350,6 +350,71 @@ audio::-webkit-media-controls-panel {
   font-weight: 400;
 }
 
+/* Сквозное видео RITUAL */
+.ritual {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 100;
+  max-width: 130px;
+}
+
+.ritual_hover:hover {
+  transform: scale(1.1);
+}
+
+.ritual__video {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.ritual__container {
+  position: relative;
+}
+
+.ritual__controls {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 200;
+  display: flex;
+  flex-direction: column;
+}
+
+.ritual__controls span:hover:not(:active) {
+  transform: scale(1.2);
+}
+
+.ritual__close {
+  width: 32px;
+  height: 32px;
+  margin-bottom: 10px;
+  border-radius: 16px;
+  background-color: black;
+  opacity: 0.6;
+  background-image: url(../img/close.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 18px;
+}
+
+.ritual__mute {
+  width: 32px;
+  height: 32px;
+  border-radius: 16px;
+  background-color: black;
+  opacity: 0.6;
+  background-image: url(../img/mute.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 16px;
+}
+
+.ritual__unmute {
+  background-image: url(../img/unmute2.svg);
+  background-size: 16px;
+}
 /* MAIN  */
 .main__title {
   margin-bottom: 10px;
@@ -2536,11 +2601,39 @@ audio::-webkit-media-controls-panel {
   background-color: var(--lessyellow);
 }
 
-.zakaz__form_descr  {
+.zakaz__form_descr {
+  margin-bottom: 20px;
   font-size: 18px;
   color: var(--textcolor);
 }
+.zakaz__faq {
+margin-bottom: 20px;
+}
+.zakaz__faq-descr {
+  font-size: 15px;
+  color: var(--textcolor);
+  line-height: 1.3;
+  text-align: justify;
+}
+.zakaz__faq-descr_strong {
+  font-weight: 500;
+}
+.zakaz__faq-link {
+  color:  rgb(207 154 7);
+  font-weight: 500;
+}
+.zakaz__faq-link:focus-visible {
+  outline: 2px solid var(--yellow);
+}
+.zakaz__faq-link:hover {
+  /* opacity: 0.7; */
+  color: var(--yellow);
+}
+.zakaz__faq-link:active {
+  color:  rgb(207 154 7);
+}
 
+/* ERORR  */
 .error {
   display: flex;
   align-items: center;
