--- a/project/musprivet/templates/musprivet/base.html
+++ b/project/musprivet/templates/musprivet/base.html
@@ -33,11 +33,11 @@
         <span class="ritual__close"></span>
         <span class="ritual__mute"></span>
       </div>
-      <video class="ritual__video" muted autoplay playsinline loop preload="metadata" poster="{% static 'img/ritual-pre.png' %}">
-        <source src="{% static 'img/ritual.mp4' %}" type="video/mp4">
-        <source src="{% static 'img/ritual.webm' %}" type="video/WebM">
-        <p>Ваш браузер не поддерживает встроенные видео.</p>
-      </video>
+        <video class="ritual__video" muted autoplay playsinline loop preload="metadata" poster="{% static 'img/muzprivet-pre.webp' %}">
+            <source src="{% static 'img/muzprivet.mp4' %}" type="video/mp4">
+            <source src="{% static 'img/muzprivet.webm' %}" type="video/WebM">
+            <p>Ваш браузер не поддерживает встроенные видео.</p>
+        </video>
     </div>
 </div>
 <header class="header">
