burger-menu corrected

--- a/project/musprivet/templates/musprivet/audioreklama.html
+++ b/project/musprivet/templates/musprivet/audioreklama.html
@@ -22,7 +22,7 @@
             <h2 class="audioreklama__list-item-title">Гимн, фирменная мелодия
               и джингл</h2>
             <p class="audioreklama__list-item-descr">За 5 дней под ключ</p>
-            <a class="audioreklama__list-item-link" href="#">Заказать</a>
+            <a class="audioreklama__list-item-link" href="reklamnaya-muzyka">Заказать</a>
           </li>
           <li class="audioreklama__list-item col-12 col-lg-6 order-lg-3">
             <img class="audioreklama__img" src="{% static 'img/audioreklama2.png' %}" alt="audioreklama2">
