--- a/project/musprivet/templates/musprivet/congrat_detail.html
+++ b/project/musprivet/templates/musprivet/congrat_detail.html
@@ -60,6 +60,26 @@
               <button type="submit" class="btn zakaz__form-link">Оплатить</button>
                 <p class="zakaz__form_descr">После оплаты на указанную Вами почту придёт музыкальное поздравление в формате mp3.</p>
             </form>
+            <div class="zakaz__faq">
+              <p class="zakaz__faq-descr">
+                <strong>Часто задаваемые вопросы:</strong>
+              </p>
+              <p class="zakaz__faq-descr zakaz__faq-descr_strong">Как заказать?</p>
+              <p class="zakaz__faq-descr">1. Выберите нужную категорию поздравления, например: Поздравление девушке по&nbsp;имени.&nbsp;</p>
+              <p class="zakaz__faq-descr">2. Выберите из&nbsp;алфавита нужное имя, например: Мария.&nbsp;</p>
+              <p class="zakaz__faq-descr">3. На&nbsp;странице с&nbsp;именем выберите подходящее по&nbsp;музыкальному стилю поздравление.&nbsp;</p>
+              <p class="zakaz__faq-descr">4. Заполните форму заказа: ваш контактный номер, e-mail и&nbsp;отметьте в&nbsp;выпадающем списке выбранный музыкальный трек. Если в&nbsp;выбранном имени есть только один трек, он&nbsp;и&nbsp;будет представлен в&nbsp;списке.&nbsp;</p>
+              <p class="zakaz__faq-descr">5. Нажмите на&nbsp;кнопку оплаты.&nbsp;</p>
+              <p class="zakaz__faq-descr">6. После оплаты на&nbsp;ваш e-mail придет выбранный трек в&nbsp;формате mp3. Как правило трек приходит в&nbsp;течение 15&nbsp;минут после оплаты, но&nbsp;не&nbsp;позднее чем через час. Также мы&nbsp;пишем <a class="zakaz__faq-link" target="_blank" href="givesong.html">песни на&nbsp;заказ</a> с&nbsp;учетом всех Ваших индивидуальных пожеланий.</p>
+              <p class="zakaz__faq-descr zakaz__faq-descr_strong">Как отправить файл с поздравлением? </p>
+              <p class="zakaz__faq-descr">MP3-файл с&nbsp;музыкальным поздравлением&nbsp;Вы можете отправить на&nbsp;телефон Вашего адресата в&nbsp;любой из&nbsp;мессенджеров, а&nbsp;также на&nbsp;телефон в&nbsp;формате смс.</p>
+              <p class="zakaz__faq-descr zakaz__faq-descr_strong">В каком формате музыкальные поздравления?</p>
+              <p class="zakaz__faq-descr">Музыкальные поздравления приходят на&nbsp;указанную Вами электронную почту в&nbsp;формате mp3. Если письма с&nbsp;mp3&nbsp;нет, проверьте папку &laquo;спам&raquo;, возможно письмо попало именно в&nbsp;нее. Если по&nbsp;технической причине mp3&nbsp;не пришел на&nbsp;почту, напишите нам <a class="zakaz__faq-link" href="mailto:hello@muzprivet.com">hello@muzprivet.com</a> и&nbsp;мы&nbsp;вышлем Вам mp3&nbsp;в один из&nbsp;мессенджеров на&nbsp;номер Вашего телефона.</p>
+              <p class="zakaz__faq-descr zakaz__faq-descr_strong">Как оплатить? </p>
+              <p class="zakaz__faq-descr">Оплата музыкального поздравления происходит через платежный терминал банка после нажатия кнопки &laquo;Оплатить&raquo; в&nbsp;форме заказа.</p>
+              <p class="zakaz__faq-descr zakaz__faq-descr_strong">Есть ли гарантии? </p>
+              <p class="zakaz__faq-descr">Гарантии выполнения заказа и&nbsp;возврата денежных средств прописаны на&nbsp;сайте https://muzprivet.com&nbsp;в&nbsp;разделе &laquo;Правовая информация&raquo;.</p>
+            </div>
           </div>
         </div>
       </section>
